Fixed alignment footer social for chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -866,6 +866,7 @@ footer {
 }
 @media (min-width: 1200px) {
   .footer-social {
+    margin-left: auto;
     justify-content: end;
   }
 }
